# docs_vectordb

./: .gitignore  LICENSE  README.md  child_script.py  child_script2.py  child_script3.py  main.py  parsed.json  pyproject.toml  rich_help.txt  rst_targets.json  rst_targets2.json  run_queries.ps1  run_results.json  run_tests.py  service_wrapper.py
chunks/: glossary_chunks.json
database/docs_lancedb/glossary.lance/_transactions/: 0-253008c3-a700-44f6-8ea4-a002d64582a8.txn
src/docs_vectordb/: assemble_doclist.py  chunk_by_indents.py  chunk_by_md.py  chunk_by_rst.py  chunk_by_rst_async.py  chunk_by_txt.py  chunking_utils.py  database_healthcheck.py  doc_retrieval.py  doc_search.py  doc_search_conversation.py  embed_and_store.py  embed_gemini.py  embed_gemini_test.py  embed_pytorch.py  embedding_server.py  gemini_session.py  generate_vectordb.py  healthcheck.py  lancedb_inspection.py  lancedb_test.py  server_cli.py
src/docs_vectordb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunking_utils.py  test_cli_consistency.py  test_doc_retrieval.py  test_doc_search.py  test_doc_search_conversation.py  test_embed_gemini.py  test_embed_pytorch.py  test_embedding_server.py  test_generate_vectordb.py  test_lancedb_inspection.py  test_main.py  test_retrieval_mismatch.py
